# dailyAuto

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp
autogit/: CMakeLists.txt  main.cpp
autogit/autogit_lib/: CMakeLists.txt
autogit/autogit_lib/include/autogit/: helpers.hpp
autogit/autogit_lib/include/autogit/roam/: Update.hpp
autogit/autogit_lib/src/autogit/: helpers.cpp
autogit/autogit_lib/src/autogit/roam/: Update.cpp
